app/client/src/Layouts/NavbarMain/ResponsiveNav.css
.navbar_container {
  height: 80px;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
  align-items: center;
  margin-bottom: 0.5rem;
  z-index: 9999;
  background-color: white;
}

.conditional_btn {
  display: none;
}

* {
  list-style: none;
}


@media (max-width: 767px) {

  .my-custom-button {
    display: none;
  }
}

.nav_logo_link {
  background-color: #eee;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
  padding: 6px;
  border-radius: 5px;
}

.Searchfield_form_nav {
  display: flex;
  width: 30%;

}

.search-results_dropdown {
  width: 100%;
  background-color: rgb(255, 250, 250);
  top: 100%;
  height: max-content;
  max-height: 30vh;
  box-shadow: rgba(100, 100, 111, 0.123) 0px 7px 20px 0px;
  border-radius: 3px;
  margin-top: 0.3rem;
  z-index: 99;
  transition: all 0.5s ease-in;

  overflow-y: scroll;

}

.stickey_btn_nav {
  position: sticky;
  bottom: 0;
}

.desktop_nav_input {
  position: relative;
  width: 360px;
}

.desktop_nav_input>div {
  border-radius: 50px;
}

.cart_length {
  background-color: #4bb497;
  padding: 1px 9px;
  color: white;
  border-radius: 20px;
  scale: 0.7;
  left: 30%;
  top: -50%;
}

.profile_icon_dropdown {
  color: #131039;
  font-size: 1rem;
  font-weight: bolder;
}

.cart-icon {
  font-size: 25px;
  fill: #131039;
}

.mdb_input_search {
  width: 300px;
}

.buttons_Nav_profile {
  display: flex;
  column-gap: 1rem;
  align-items: center;
}

.User_profile_dropdown {
  list-style: none;
  position: relative;
}

.dropdown_results_nav {
  display: none;
  position: absolute;
}

.dropdown_items_nav {
  background-color: white;
  color: #131039;
  font-weight: 500;
  display: flex;
  align-items: center;
  column-gap: 0.6rem;
  font-size: 13px;
  padding: 3px;
  border-radius: 3px;
}

.dropdown_items_nav:hover {
  background-color: #4bb497;
  color: #131039;
}

.User_profile_dropdown:hover {
  .dropdown_results_nav {
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    display: block;
    right: 50%;
    border-radius: 5px;
    padding: 3px;
    height: fit-content;
    width: max-content;

    row-gap: 0.09rem;
    display: flex;
    flex-direction: column;
    z-index: 999;
  }
}

.Toggle_menu_sidebar_navbar {
  display: none;
}

.hamburger_menu {
  display: none;
}

.mobile_nav_link {
  display: none;
}

.mobile_links_divs {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  column-gap: 1rem;
  justify-content: space-between;
}

/* main */
.navbar_input_btn {
  display: "flex";
  background-color: #4bb497;
  border-radius: 50px;
  justify-content: center;
  transition: all 300ms ease-out all;

  align-items: center;
  margin-left: 0.2rem;
  outline: none;
  border: none;
  padding: 0.5rem 1.1rem;
  border-radius: 2px;
}

@media screen and (min-width: 300px) and (max-width: 660px) {
  .desktop_nav_input {
    width: 400px;
  }

  .navbar_input_btn {
    display: none;
  }

  .Toggle_menu_sidebar_navbar {
    position: absolute;
    background-color: white;
    z-index: 99999;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
    right: 0;
    display: block;
    width: 0%;
    height: 100%;

    position: fixed;
  }

  .Toggle_menu_sidebar_navbar_clicked {
    width: 65%;
    top: 0;
    position: sticky;
    background-color: #eee;
    z-index: 99999;
    right: 0;
    display: block;
    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
    height: 100%;
    position: fixed;
  }

  .form-control {
    width: 260px;
  }

  .hamburger_menu {
    display: block;
    z-index: 99999;
    font-size: 24px;
  }

  .User_profile_dropdown {
    display: none;
  }

  .buttons_Nav_profile {
    column-gap: 0.3rem;
  }

  .mobile_nav_link {
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    width: 100%;
  }

  .nav_link_company {
    display: none;
  }

  .navbar_container {
    height: fit-content;
  }

  .mobile_links_divs {
    display: flex;
    align-items: center;
    column-gap: 1rem;
    flex-direction: row-reverse;
  }

  .buttons_Nav_profile {
    display: none;
  }
}

.User_profile_dropdown:hover {
  .profile_icon_dropdown {
    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
    transform: rotateX(180deg);
  }
}

.nav_img {
  border-radius: 5px;
}

/* dropdown */
.dropdown_image_results {
  height: 70px;
  border-radius: 5px;
  width: 50px;
  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
  object-fit: cover;
}

.dropdown_card_nav {
  display: flex;
  align-items: center;
  border-bottom: 0.4px solid #e9e9e9;
  margin-bottom: 0.4rem;
  justify-content: space-between;

  border-radius: 5px;
}

.dropdown_card_nav:hover {
  background-color: rgba(233, 233, 233, 0.527)
}

.dropdown_text_nav {
  margin-left: 0.4rem;
}

@media screen and (min-width:300px) and (max-width:660px) {
  .Searchfield_form_nav {
    width: 95%;
  }

  .mobile_sidebar {
    display: flex;
    background-color: #eee;
    justify-content: center;
  }

  .Links_container {
    width: 100%;
    display: flex;
    flex-direction: column;
  }
}

/* ipad */
@media screen and (min-width:661px) and (max-width:820px) {
  .Searchfield_form_nav {
    width: 55%;
  }
}

